--- a/test/function/simd/combine/CMakeLists.txt
+++ b/test/function/simd/combine/CMakeLists.txt
@@ -6,26 +6,10 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-## Larger test suites go there
-add_subdirectory(combine)
-add_subdirectory(extract)
-add_subdirectory(genmask)
-add_subdirectory(insert)
-add_subdirectory(load)
-add_subdirectory(make)
-add_subdirectory(splat)
-
 set ( SOURCES
-  aligned_load.cpp
-  aligned_store.cpp
-  bitwise_cast.cpp
-  broadcast.cpp
-  enumerate.cpp
-  store.cpp
-  automap.cpp
-  autofold.cpp
-  autosplat.cpp
+  arithmetic.cpp
+  logical.cpp
 )
 
-make_unit( "boost.simd.function.simd"   ${SOURCES})
-make_coverage("boost.simd.function.simd"  ${SOURCES})
+make_unit( "boost.simd.function.simd.combine"   ${SOURCES})
+make_coverage("boost.simd.function.simd.combine"  ${SOURCES})
