--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(genmask)
 add_subdirectory(insert)
 add_subdirectory(load)
 add_subdirectory(make)
+add_subdirectory(slice)
 add_subdirectory(splat)
 
 set ( SOURCES
