--- a/test/function/simd/slice/CMakeLists.txt
+++ b/test/function/simd/slice/CMakeLists.txt
@@ -7,8 +7,10 @@
 ##===================================================================================================
 
 set ( SOURCES
+  arithmetic.cpp
   arithmetic.high.cpp
   arithmetic.low.cpp
+  logical.cpp
   logical.high.cpp
   logical.low.cpp
 )
