Update travis setup back to normal

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,5 +61,5 @@ before_script:
 script:
   - make update.boost-header-only | grep -v "^-- " # Silent installation
   - make update.boost.dispatch    | grep -v "^-- " # Silent installation
-  - make -k boost.simd.function.simd.unit
-  - ctest -R ^boost.simd.function.simd.*.unit$
+  - make -k unit
+  - ctest
