Shorten target names

--- a/test/api/helper/CMakeLists.txt
+++ b/test/api/helper/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                               Copyright 2016  NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -11,5 +11,5 @@ set ( SOURCES
       mask.cpp
     )
 
-make_unit( "boost.simd.api.helper" ${SOURCES})
-make_coverage("boost.simd.api.helper" ${SOURCES})
+make_unit( "api.helper" ${SOURCES})
+make_coverage("api.helper" ${SOURCES})
