--- a/test/api/pack/CMakeLists.txt
+++ b/test/api/pack/CMakeLists.txt
@@ -1,10 +1,12 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
+
+add_subdirectory(ctor)
 
 set ( SOURCES
       concepts.cpp
@@ -14,7 +16,5 @@ set ( SOURCES
       proxy.cpp
     )
 
-make_unit( "boost.simd.api.pack" ${SOURCES})
-make_coverage("boost.simd.api.pack" ${SOURCES})
-
-add_subdirectory(ctor)
+make_unit( "api.pack" ${SOURCES})
+make_coverage("api.pack" ${SOURCES})
