--- a/test/api/pack/ctor/CMakeLists.txt
+++ b/test/api/pack/ctor/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                               Copyright 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -14,5 +14,5 @@ set ( SOURCES
       splat.cpp
     )
 
-make_unit( "boost.simd.api.pack.ctor" ${SOURCES})
-make_coverage("boost.simd.api.pack.ctor" ${SOURCES})
+make_unit( "api.pack.ctor" ${SOURCES})
+make_coverage("api.pack.ctor" ${SOURCES})
