--- a/test/api/meta/CMakeLists.txt
+++ b/test/api/meta/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                               Copyright 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -17,5 +17,5 @@ set ( SOURCES
       upgrade.cpp
     )
 
-make_unit( "boost.simd.api.meta" ${SOURCES})
-make_coverage("boost.simd.api.meta" ${SOURCES})
+make_unit( "api.meta" ${SOURCES})
+make_coverage("api.meta" ${SOURCES})
