--- a/test/architecture/CMakeLists.txt
+++ b/test/architecture/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -11,5 +11,5 @@ set ( SOURCES
       limits.cpp
     )
 
-make_unit( "boost.simd.architecture" ${SOURCES})
-make_coverage("boost.simd.architecture" ${SOURCES})
+make_unit( "architecture" ${SOURCES})
+make_coverage("architecture" ${SOURCES})
