--- a/test/constant/scalar/CMakeLists.txt
+++ b/test/constant/scalar/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -131,5 +131,5 @@ set ( SOURCES
   twotomnmbo_3.cpp
   )
 
-make_unit( "boost.simd.constant.scalar"     ${SOURCES})
-make_coverage("boost.simd.constant.scalar"  ${SOURCES})
+make_unit( "constant.scalar"     ${SOURCES})
+make_coverage("constant.scalar"  ${SOURCES})
