--- a/test/constant/simd/CMakeLists.txt
+++ b/test/constant/simd/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -174,5 +174,5 @@ valmin.cpp
 zero.cpp
   )
 
-make_unit( "boost.simd.constant.simd"     ${SOURCES})
-make_coverage("boost.simd.constant.simd"  ${SOURCES})
+make_unit( "constant.simd"     ${SOURCES})
+make_coverage("constant.simd"  ${SOURCES})
