--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
@@ -437,5 +437,5 @@ set ( SOURCES
    signbit.cpp
 )
 
-make_unit( "boost.simd.function.scalar"   ${SOURCES})
-make_coverage("boost.simd.function.scalar"  ${SOURCES})
+make_unit( "function.scalar"   ${SOURCES})
+make_coverage("function.scalar"  ${SOURCES})
