--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -163,7 +163,7 @@ logical_notor.cpp
 logical_or.cpp
 logical_ornot.cpp
 logical_xor.cpp
-lookup.cpp
+#lookup.cpp
 majority.cpp
 mantissa.cpp
 max.cpp
@@ -186,8 +186,6 @@ negate.cpp
 negatenz.cpp
 negif.cpp
 negifnot.cpp
-#neg.cpp
-neg_s.cpp
 nextafter.cpp
 next.cpp
 nthroot.cpp
@@ -221,7 +219,7 @@ shift_right.cpp
 sign.cpp
 significants.cpp
 signnz.cpp
-sort.cpp
+#sort.cpp
 sqr_abs.cpp
 sqr.cpp
 sqr_s.cpp
