--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -6,14 +6,9 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-NS_include(make_unit)
-NS_include(make_coverage)
+set ( SOURCES
+      issue_21.cpp
+    )
 
-set(CMAKE_BUILD_TYPE "Debug")
-
-## Add all test folders
-add_subdirectory(api)
-add_subdirectory(architecture)
-add_subdirectory(constant)
-add_subdirectory(function)
-add_subdirectory(regression)
+make_unit( "regression" ${SOURCES})
+make_coverage("regression" ${SOURCES})
