--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -7,6 +7,7 @@
 ##===================================================================================================
 
 set ( SOURCES
+      issue_18.cpp
       issue_21.cpp
     )
 
