--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -195,6 +195,9 @@ posmin.cpp
 predecessor.cpp
 prev.cpp
 rec.cpp
+rem_pio2_cephes.cpp
+rem_pio2_medium.cpp
+rem_pio2_straight.cpp
 remquo.cpp
 reversebits.cpp
 reverse.cpp
@@ -278,9 +281,7 @@ unary_plus.cpp
 ####interleave_first.cpp
 ####interleave_second.cpp
 ####pow2.cpp
-####rem_pio2_cephes.cpp
-####rem_pio2_medium.cpp
-####rem_pio2_straight.cpp
+
 ####repeat_lower_half.cpp
 ####repeat_upper_half.cpp
 ####rsqrt.cpp
