invtrigo in degree and pi multiples

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -22,13 +22,21 @@ set ( SOURCES
 abs.cpp
 abs_s.cpp
 acos.cpp
+acosd.cpp
+acospi.cpp
 acot.cpp
+acotd.cpp
+acotpi.cpp
 aligned_load.cpp
 aligned_store.cpp
 all.cpp
 arg.cpp
 asin.cpp
+asind.cpp
+asinpi.cpp
 atan.cpp
+atand.cpp
+atanpi.cpp
 autofold.cpp
 automap.cpp
 autosplat.cpp
