Clean-up load & gather

--- a/test/function/simd/load/CMakeLists.txt
+++ b/test/function/simd/load/CMakeLists.txt
@@ -11,8 +11,8 @@ set ( SOURCES
   pointer.logical.cpp
   range.arithmetic.cpp
   range.logical.cpp
-  # gather.arithmetic.cpp
-  # gather.logical.cpp
+  gather.arithmetic.cpp
+  gather.logical.cpp
 )
 
 make_unit( "function.simd.load"   ${SOURCES})
