--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -99,7 +99,7 @@ inc.cpp
 inc_s.cpp
 indeg.cpp
 inrad.cpp
-#interleave_first.cpp
+interleave_first.cpp
 #interleave_second.cpp
 #interleave_even.cpp
 #interleave_odd.cpp
