--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -101,7 +101,7 @@ indeg.cpp
 inrad.cpp
 interleave_first.cpp
 interleave_second.cpp
-#interleave_even.cpp
+interleave_even.cpp
 interleave_odd.cpp
 iround2even.cpp
 iround.cpp
