Use develop branch for ns.bench + Update ns.bench

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ if (DEFINED USE_SELF_BOOST)
   )
 endif()
 
+set(NS_BENCH_GIT_TAG develop)
 NS_project_include(ns.bench.standalone)
 NS_project_include(brigand.standalone)
 NS_project_include(stf.standalone)
