More load/aligned_load
Fix some mistake in algined_load
Add support for mask load
Add supprot for mask aligned_load

--- a/test/function/simd/aligned_load/CMakeLists.txt
+++ b/test/function/simd/aligned_load/CMakeLists.txt
@@ -9,6 +9,8 @@
 set ( SOURCES
   pointer.arithmetic.cpp
   pointer.logical.cpp
+  mask.arithmetic.cpp
+#  mask.logical.cpp
   misaligned.arithmetic.cpp
 #  misaligned.logical.cpp
 )
