--- a/test/function/simd/load/CMakeLists.txt
+++ b/test/function/simd/load/CMakeLists.txt
@@ -13,6 +13,7 @@ set ( SOURCES
   range.logical.cpp
   gather.arithmetic.cpp
   gather.logical.cpp
+  mask.arithmetic.cpp
 )
 
 make_unit( "function.simd.load"   ${SOURCES})
