--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -250,6 +250,11 @@ predecessor.cpp
 prev.cpp
 prod.cpp
 rec.cpp
+rem.cpp
+remround.cpp
+remround2even.cpp
+remfloor.cpp
+remceil.cpp
 rem_pio2.cpp
 rem_pio2_cephes.cpp
 rem_pio2_medium.cpp
@@ -281,7 +286,6 @@ sincosd.cpp
 sincospi.cpp
 sind.cpp
 sinpi.cpp
-#sort.cpp
 split_multiplies.cpp
 sinhcosh.cpp
 sinh.cpp
@@ -313,11 +317,6 @@ twopower.cpp
 unary_minus.cpp
 unary_minus_s.cpp
 unary_plus.cpp
-#mod.cpp
-#muls.cpp
-#nbtrue.cpp
-#rem.cpp TODO
-#pow2.cpp
 )
 
 make_unit( "function.simd"  ${SOURCES})
