--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,14 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.9']
       env: CXX_STD=11 TOOLSET=g++-4.9 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0
 
@@ -46,6 +54,14 @@ matrix:
       compiler: clang
       addons:
         apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
+          packages: ['clang-3.5']
+      env: CXX_STD=11 TOOLSET=clang++-3.5 SIMD_EXT=-msse4.1
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
           packages: ['clang-3.6']
       env: CXX_STD=11 TOOLSET=clang++-3.6 SIMD_EXT=-mavx
@@ -60,7 +76,6 @@ before_script:
 # Build unit and run test
 script:
   - make update.boost-header-only | grep -v "^-- " # Silent installation
-  - make update.boost.dispatch    | grep -v "^-- " # Silent installation
   - make  -j 4 -k  regression.unit
   - ctest -j 4 -R ^regression.*.unit
   - make  -j 4 -k  api.unit
