renaming ifadd ifsub ifdec  ifinc and 'not' versions

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -127,10 +127,10 @@ if_else_allbits.cpp
 if_else.cpp
 if_else_zero.cpp
 ifloor.cpp
-ifnotadd.cpp
-ifnotdec.cpp
-ifnotinc.cpp
-ifnotsub.cpp
+ifnot_plus.cpp
+ifnot_dec.cpp
+ifnot_inc.cpp
+ifnot_minus.cpp
 if_one_else_zero.cpp
 if_zero_else.cpp
 if_zero_else_one.cpp
