Sum and splatted sum
X86 sum requires a bunch of specific cases to minimize
uops. It also happens that splatting the sum is better
than going through the butterfly fold.

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -291,6 +291,7 @@ sqrt1pm1.cpp
 sqrt.cpp
 store.cpp
 successor.cpp
+sum.cpp
 tan.cpp
 tand.cpp
 tanpi.cpp
@@ -316,8 +317,8 @@ unary_plus.cpp
 #muls.cpp
 #nbtrue.cpp
 #rem.cpp TODO
-####dot.cpp
-####pow2.cpp
+#dot.cpp
+#pow2.cpp
 )
 
 make_unit( "function.simd"  ${SOURCES})
