Implementation for cummin

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -91,8 +91,9 @@ cotpi.cpp
 cosh.cpp
 coth.cpp
 ctz.cpp
-cumsum.cpp
+cummin.cpp
 cumprod.cpp
+cumsum.cpp
 dec.cpp
 dec_s.cpp
 deinterleave_first.cpp
