acos asin atan cos fast_acos sin

--- a/exhaustive/function/simd/CMakeLists.txt
+++ b/exhaustive/function/simd/CMakeLists.txt
@@ -7,6 +7,10 @@
 ## -------------------------------------------------------------------------------------------------
 
 set(SOURCES
+  acos.cpp
+  atan.cpp
+  asin.cpp
+  fast_acos.cpp
   exp.cpp
   exp10.cpp
   exp2.cpp
