--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,14 @@ language: cpp
 
 matrix:
   include:
+    - os: osx
+      compiler: clang
+      env: CXX_STD=11 TOOLSET=clang++ SIMD_EXT=-msse4.2 OPT=
+
+    - os: osx
+      compiler: clang
+      env: CXX_STD=11 TOOLSET=clang++ SIMD_EXT=-mavx OPT=
+      
     - os: linux
       compiler: gcc
       addons:
@@ -41,14 +49,6 @@ matrix:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5']
       env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0
-
-    - os: osx
-      compiler: clang
-      env: CXX_STD=11 TOOLSET=clang++ SIMD_EXT=-msse4.2 OPT=
-
-    - os: osx
-      compiler: clang
-      env: CXX_STD=11 TOOLSET=clang++ SIMD_EXT=-mavx OPT=-
 
 # Prepare build
 before_script:
