--- a/test/function/simd/shuffle/CMakeLists.txt
+++ b/test/function/simd/shuffle/CMakeLists.txt
@@ -7,13 +7,21 @@
 ##===================================================================================================
 
 set ( SOURCES
-  cardinal_1.cpp
-  cardinal_2.cpp
+  cardinal.1.cpp
+  cardinal.2.unary.cpp
+  cardinal.2.binary.cpp
+
+  cardinal_4.cpp
+
   broadcast.binary.cpp
   broadcast.unary.cpp
   deinterleave.full.cpp
   deinterleave.front.cpp
   deinterleave.back.cpp
+  interleave.even.cpp
+  interleave.first.cpp
+  interleave.odd.cpp
+  interleave.second.cpp
   identity.cpp
   repeat.cpp
   reverse.cpp
