tests for round

--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -241,7 +241,7 @@ set(SOURCES
 #    rol.cpp
 #    ror.cpp
 #    nearbyint.cpp
-#    round.cpp
+     round.cpp
 #    rrol.cpp
 #    rror.cpp
 #    rsqrt.cpp
