--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -84,14 +84,21 @@ set(SOURCES
     exprecnegc.cpp
     exprecneg.cpp
     expx2.cpp
+    fast.frexp.cpp
+    fast.hypot.cpp
+    fast.rec.cpp
+    fast.rem.cpp
+    fast.rsqrt.cpp
+    fast.sqrt.cpp
+    fast.trunc.cpp
     ffs.cpp
     firstbitset.cpp
     firstbitunset.cpp
     floor.cpp
     fma.cpp
-     fms.cpp
-     fnma.cpp
-     fnms.cpp
+    fms.cpp
+    fnma.cpp
+    fnms.cpp
     frac.cpp
     frexp.cpp
     genmaskc.cpp
